# Astemios

./: .gitignore  CMakeLists.txt  README.md
AstemiosCommandManager/: CMakeLists.txt
AstemiosCommandManager/include/AstemiosCommandManager/: CommandManager.h
AstemiosCommandManager/include/AstemiosCommandManager/base/: Command.h
AstemiosCommandManager/src/: CommandManager.cpp
AstemiosCommandManager/src/base/: Command.cpp
AstemiosCore/: CMakeLists.txt
AstemiosCore/src/: CommandTest.cpp  CommandTest.h  main.cpp
AstemiosCore/src/client/: DiscordClient.cpp  DiscordClient.h
AstemiosLogger/: CMakeLists.txt
AstemiosLogger/include/Logger/: LoggerManager.h
AstemiosLogger/include/Logger/base/: BaseFormatter.h  BaseLogger.h  Structs.h
AstemiosLogger/include/Logger/formatters/: BasicFormatter.h  ConsoleColorFormatter.h
AstemiosLogger/include/Logger/outputs/console/: ConsoleLogger.h
AstemiosLogger/include/Logger/outputs/file/: FileLogger.h
AstemiosLogger/src/: LoggerManager.cpp
AstemiosLogger/src/formatters/: BasicFormatter.cpp  ConsoleColorFormatter.cpp
AstemiosLogger/src/outputs/console/: ConsoleLogger.cpp
AstemiosLogger/src/outputs/file/: FileLogger.cpp
